# akaibu

./: README.md  pyproject.toml
src/akaibu/: __init__.py  checker.py  cli.py  library.py  paper.py  summarizer.py  utils.py
