[project]
name = "akaibu"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "feedparser>=6.0.12",
    "kensakun>=0.1.0",
    "numpy>=2.3.4",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "reader>=3.19",
    "rich>=14.2.0",
    "sienna>=0.2.6",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "neovim>=0.3.1",
    "pip>=25.2",
    "pynvim>=0.6.0",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
    "ruff-lsp>=0.0.62",
]

[project.scripts]
akaibu = "akaibu.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
